docs: update main README
Signed-off-by: Alexander Sparkowsky <info@roamingthings.de>